# fbrseo

./: .dockerignore  .gitignore  Dockerfile  api_keys_generated.json  apikey_template.json  clients_created.json  create_all_clients.json  create_apikey.json  create_client.json  create_marketing_apikey.json  create_marketing_client.json  deploy.sh  docker-compose.yml  setup.sh  start.sh
backend/: .env.example  Dockerfile  Dockerfile.prod  requirements.txt  seed_db.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py  domains.py
backend/app/core/: cache.py  security.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  auth.py  domain.py
backend/app/schemas/: auth.py  seo.py
docs/: API_KEYS_OVERVIEW.md  CUSTOMIZATION.md  FACEBRASIL_API_KEY.md  PLANNER_API_KEY.md  QUICK_START.md  README.md  TVFACEBRASIL_API_KEY.md  VIDEOCREATOR_API_KEY.md  project-goals.md
frontend/: .env.example  Dockerfile.prod  README.md  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/services/: api.js
nginx/: monolith.conf
nginx/conf.d/: default.conf
scripts/: generate_api_client.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/seo_api/: __init__.py  client.py  exceptions.py
